--- a/frontend/public/styles/tv.css
+++ b/frontend/public/styles/tv.css
@@ -5,7 +5,7 @@ body {
     font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    height: 107vh;
 }
 
 /* Style de la zone d'affichage de la TV */
